--- a/src/index.css
+++ b/src/index.css
@@ -37,13 +37,17 @@ ul {
   list-style-type: disc; /* Add bullets to the list */
   padding-left: 20px;
 }
-.access-token-box {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-top: 20px;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-}
+
 li {
   margin-bottom: 5px;
+}
+.access-token-box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  word-wrap: break-word; /* Ensure long words break to the next line */
+  max-width: 100%; /* Ensure the box does not exceed the container width */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
